--- a/django_project/boards/templates/boards/colourThief/CT_2.html
+++ b/django_project/boards/templates/boards/colourThief/CT_2.html
@@ -7,6 +7,10 @@
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 	<style type="text/css">
 		
@@ -67,6 +71,7 @@
 		body {
 			margin: 2rem;
 		}
+
 	</style>
 </head>
 <body onload="checkImageLoad();">
@@ -82,11 +87,21 @@
 					<img src={{ unsplash.urls.small }} crossorigin="anonymous">
 					<div class="spacer"></div>
 					<div class="colour-palette">
-						<div class="square" id='{{ forloop.counter0 }}0'+ style="background: #ededed;"></div>
-						<div class="square" id='{{ forloop.counter0 }}1'+ style="background: #ededed;"></div>
-						<div class="square" id='{{ forloop.counter0 }}2'+ style="background: #ededed;"></div>
-						<div class="square" id='{{ forloop.counter0 }}3'+ style="background: #ededed;"></div>
-						<div class="square" id='{{ forloop.counter0 }}4'+ style="background: #ededed;"></div>
+						<a href="#" data-toggle="tooltip" data-placement="bottom" title="Hooray!" id='tooltip-{{ forloop.counter0 }}0'>
+							<div class="square" id='{{ forloop.counter0 }}0'+ style="background: #ededed; border-radius: 0px 0px 0px 3px;"></div>
+						</a>
+						<a href="#" data-toggle="tooltip" data-placement="bottom" title="Hooray!" id='tooltip-{{ forloop.counter0 }}1'>
+							<div class="square" id='{{ forloop.counter0 }}1'+ style="background: #ededed;"></div>
+						</a>
+						<a href="#" data-toggle="tooltip" data-placement="bottom" title="Hooray!" id='tooltip-{{ forloop.counter0 }}2'>
+							<div class="square" id='{{ forloop.counter0 }}2'+ style="background: #ededed;"></div>
+						</a>
+						<a href="#" data-toggle="tooltip" data-placement="bottom" title="Hooray!" id='tooltip-{{ forloop.counter0 }}3'>
+							<div class="square" id='{{ forloop.counter0 }}3'+ style="background: #ededed;"></div>
+						</a>
+						<a href="#" data-toggle="tooltip" data-placement="bottom" title="Hooray!" id='tooltip-{{ forloop.counter0 }}4'>
+							<div class="square" id='{{ forloop.counter0 }}4'+ style="background: #ededed; border-radius: 0px 0px 3px 0px;"></div>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -232,6 +247,35 @@
 
 	<script type="text/javascript">
 
+
+		$(document).click(function(event) {
+			// console.log(event.target)
+			// console.log(event.target.parentElement.id)
+			try {
+				var selectedColour = $("#" + event.target.parentElement.id).attr('data-original-title')
+				alert(selectedColour)
+			} catch(e) {
+
+			}
+
+
+		});
+
+		var rgbToHex = function (rgb) { 
+			var hex = Number(rgb).toString(16);
+			if (hex.length < 2) {
+				hex = "0" + hex;
+			}
+			return hex;
+		};
+
+		var fullColorHex = function(r,g,b) {   
+			var red = rgbToHex(r);
+			var green = rgbToHex(g);
+			var blue = rgbToHex(b);
+			return red+green+blue;
+		};
+
 		function checkImageLoad() {
 
 			const colorThief = new ColorThief();
@@ -249,11 +293,16 @@
 				for (var col in color) {
 					var palette_col = 'rgb(' + color[col] + ')'
 					$('#' + i + col).css('background', palette_col);
+					$('#tooltip-' + i + col).attr('data-original-title', "#" + fullColorHex(color[col][0], color[col][1], color[col][2]))
 				}
 
 			}
 
 		}
+
+		$(document).ready(function(){
+			$('[data-toggle="tooltip"]').tooltip();   
+		});
 
 	</script>
 </body>
