--- a/django_project/boards/templates/boards/colourThief/CT_2.html
+++ b/django_project/boards/templates/boards/colourThief/CT_2.html
@@ -14,9 +14,82 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
 
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap" rel="stylesheet">
+
+	<script src="https://code.iconify.design/1/1.0.5/iconify.min.js"></script>
+
+	<style type="text/css">
+		body{
+			font-family: 'Quicksand', sans-serif;
+		}
+
+		.container {
+			color: white;
+		}
+
+		h1 {
+			font-weight: 700;
+			color: lightgrey;
+		}
+
+		.jumbotron {
+			background-image: url("https://images.unsplash.com/photo-1503682579489-1a53aff795af?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+			background-size: cover;
+			background-position: 0;
+			/*height: 30rem;*/
+			padding-top: 10rem;
+			opacity: 85%;
+			background-blend-mode: multiply;
+		}
+
+		.jumbotron > img {
+			/*width: 100%;*/
+			/*object-fit: cover;*/
+		}
+
+		.btn.nohover:hover {
+			cursor:default !important;
+		}
+
+		.saving{
+			font-weight: bold;
+			font-style: italic;
+			background: #f48fb1;
+		}
+
+		.counting {
+			font-weight: bold;
+			background: #4dd0e1;
+		}
+
+		button {
+			margin-left: 0.5em;
+		}
+
+		.dropdown-item:active {
+			background-color: #5bc0de;
+		}
+
+		nav {
+			/*margin-bottom: 2rem;*/
+		}
+
+		hr {
+			border-top: 1px solid white;
+		}
+
+		input[type="text"], textarea {
+			outline: none;
+			box-shadow:none !important;
+			border:1px solid #ccc !important;
+		}
+
+	</style>
+
 	<style type="text/css">
 		
 		.grid {
+			margin: 2rem;
 			display: grid;
 			grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 			grid-gap: 1rem;
@@ -71,12 +144,59 @@
 		}
 
 		body {
-			margin: 2rem;
+			/*margin: 2rem;*/
 		}
 
 	</style>
 </head>
 <body onload="checkImageLoad();">
+
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+		
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Link</a>
+				</li>
+
+				<li class="nav-item">
+					<button onclick="myToggle()" id="focusToggle" type="button" class="btn btn-dark" data-toggle="modal">Toggle On</button>
+				</li>
+
+			</ul>
+
+		</div>
+	</nav>
+
+	<div class="jumbotron jumbotron-fluid bg-dark">
+		<div class="container">
+			<h1 class="display-4 text-white">Pal<span>&#233;</span>tte</h1>
+			<p class="lead">Moodboard tool to help you search for your next vibe.</p>
+
+			<form action="{% url 'boards:boards-searchImages' %}" method="GET">
+				<div class="form-row">
+
+					<div class="col-12">
+						<!-- <label class="sr-only" for="inlineFormInputGroup">Search..</label> -->
+						<div class="input-group mb-2">
+							<div class="input-group-prepend">
+								<div class="input-group-text"><span class="iconify" data-icon="ion:search" data-inline="false"></span></div>
+							</div>
+							<input name="query" type="text" class="form-control" id="myHideInput" onkeyup="myHideFilter()" placeholder="Search.." value="{{request.GET.query}}">
+						</div>
+					</div>
+
+				</div>
+			</form>
+		</div>
+	</div>
 
 	<div class="grid">
 
@@ -248,6 +368,12 @@
 	</div>
 
 	<script type="text/javascript">
+
+		function myHideFilter() {
+			var input = document.getElementById("myHideInput");
+			var filter = input.value;
+			// console.log(filter)
+		}
 
 		// Tooltip copy to clipboard
 
