--- a/django_project/boards/templates/boards/colourThief/CT_2.html
+++ b/django_project/boards/templates/boards/colourThief/CT_2.html
@@ -369,6 +369,15 @@
 
 	<script type="text/javascript">
 
+		$('#myHideInput').on('keyup keypress', function(e) {
+			var keyCode = e.keyCode || e.which;
+			if (keyCode === 13) { 
+				
+				// return false;
+			}
+		});
+
+
 		function myHideFilter() {
 			var input = document.getElementById("myHideInput");
 			var filter = input.value;
@@ -458,6 +467,9 @@
 
 		$(document).ready(function(){
 			$('[data-toggle="tooltip"]').tooltip();
+
+			// console.log($('#myHideInput')[0].value)
+			$('#myHideInput')[0].value = ""
 		});
 
 	</script>
