--- a/django_project/boards/templates/boards/colourThief/CT_4.html
+++ b/django_project/boards/templates/boards/colourThief/CT_4.html
@@ -233,12 +233,13 @@
 </head>
 <body onload="checkImageLoad();">
 
-	<nav id="navSearch" class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Pal<span>&#233;</span>tte</a>
-		<form action="{% url 'boards:boards-searchImages' %}" method="GET">
-			<div class="form-row">
+	<!-- <nav id="navSearch" class="navbar navbar-expand-lg navbar-light bg-light">
 
-				<div class="col-12">
+		<div style="display: inline-block">
+			<a class="navbar-brand" href="#"><i class="fas fa-palette" style="color: orange;"></i> <span style="font-weight: 500">Pal<span>&#233;</span>tte</span></a>
+			
+			<form action="{% url 'boards:boards-searchImages' %}" method="GET">
+				<div class="form-row">
 					<div class="input-group">
 						<div class="input-group-prepend">
 							<div class="input-group-text"><span class="iconify" data-icon="ion:search" data-inline="false"></span></div>
@@ -246,36 +247,68 @@
 						<input name="query" type="text" class="form-control" id="navSearchInput" onkeyup="myHideFilter()" placeholder="Search.." value="{{request.GET.query}}">
 					</div>
 				</div>
+			</form>
 
-			</div>
-		</form>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse noselect" id="navbarSupportedContent">
-		
-			<ul class="navbar-nav mr-auto">
-
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse noselect" id="navbarSupportedContent">
+			
 				<ul class="navbar-nav mr-auto">
 
-				{% for header in context.tab_headers %}
+					{% for header in context.tab_headers %}
 
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'boards:boards-searchTabImages' header %}">{{ header }}</a>
-				</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'boards:boards-searchTabImages' header %}">{{ header }}</a>
+					</li>
 
-				{% endfor %}
+					{% endfor %}
 
-			</ul>
-
-			</ul>
+				</ul>
+			</div>
 
 		</div>
-		<!-- <div class="collapse navbar-collapse noselect" id="navbarSupportedContent" style="display: inline-block">
-		
-			
 
-		</div> -->
+	</nav> -->
+
+	<nav class="navbar navbar-light sticky-top bg-light flex-wrap2 flex-md-nowrap p-0">
+		<a class="navbar-brand col-auto mr-0" href="#"><i class="fas fa-palette" style="color: orange;"></i> <span style="font-weight: 500">Pal<span>&#233;</span>tte</span></a>
+
+		<button class="navbar-toggler d-md-none mt-1 mr-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="input-group py-1 px-2 px-md-0">
+			<input class="form-control form-control-dark" type="text" placeholder="Search here..." aria-label="Search">
+			<div class="input-group-append">
+				<button class="btn btn-outline-dark" type="submit"><i class="fa fa-search"></i></button>
+			</div>
+		</div>
+
+		<ul class="navbar-nav navbar-expand-md pl-2 pr-3">
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto text-nowrap">
+					<li class="nav-item my-1 active">
+						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item dropdown my-1">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<i class="fa fa-folder-open" aria-hidden="true"></i>
+							Categories
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Sports</a>
+							<a class="dropdown-item" href="#">Hot</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Mad Science</a>
+						</div>
+					</li>
+					<li class="nav-item my-1">
+						<a href="#" class="nav-link btn btn-outline-secondary"><i class="fa fa-user"></i> My account</a>
+					</li>
+				</ul>
+			</div>
+		</ul>
 	</nav>
 
 	<div class="jumbotron jumbotron-fluid bg-dark noselect">
@@ -286,13 +319,11 @@
 			<form action="{% url 'boards:boards-searchImages' %}" method="GET">
 				<div class="form-row">
 
-					<div class="col-12">
-						<div class="input-group mb-2">
-							<div class="input-group-prepend">
-								<div class="input-group-text"><span class="iconify" data-icon="ion:search" data-inline="false"></span></div>
-							</div>
-							<input name="query" type="text" class="form-control" id="myHideInput" onkeyup="myHideFilter()" placeholder="Search.." value="{{request.GET.query}}">
+					<div class="input-group mb-2">
+						<div class="input-group-prepend">
+							<div class="input-group-text"><span class="iconify" data-icon="ion:search" data-inline="false"></span></div>
 						</div>
+						<input name="query" type="text" class="form-control" id="myHideInput" onkeyup="myHideFilter()" placeholder="Search.." value="{{request.GET.query}}">
 					</div>
 
 				</div>
