Calendar by year and date
http://localhost:8000/maketime/calendarView/2020/6/

--- a/django_project/boards/templates/boards/colourThief/CT_4.html
+++ b/django_project/boards/templates/boards/colourThief/CT_4.html
@@ -645,7 +645,7 @@
 
 			// console.log($('#myHideInput')[0].value)
 			$('#myHideInput')[0].value = ""
-			$('#navSearchInput')[0].value = ""
+			// $('#navSearchInput')[0].value = ""
 		});
 
 	</script>
